dfir_rs/tests/compile-fail-stable/surface_source_stream_not_fused.stderr
error[E0277]: the trait bound `NotFusedStream: FusedStream` is not satisfied
  --> tests/compile-fail-stable/surface_source_stream_not_fused.rs:29:23
   |
29 |         source_stream(stream) -> for_each(std::mem::drop);
   |         ------------- ^^^^^^ unsatisfied trait bound
   |         |
   |         required by a bound introduced by this call
   |
help: the trait `FusedStream` is not implemented for `NotFusedStream`
  --> tests/compile-fail-stable/surface_source_stream_not_fused.rs:9:1
   |
 9 | struct NotFusedStream {
   | ^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `FusedStream`:
             &mut F
             Box<S>
             BufferUnordered<St>
             Buffered<St>
             FlatMapUnordered<St, U, F>
             FlattenSink<Fut, Si>
             FlattenStream<F>
             FuturesOrdered<Fut>
           and $N others
note: required by a bound in `check_stream`
  --> tests/compile-fail-stable/surface_source_stream_not_fused.rs:29:9
   |
29 |         source_stream(stream) -> for_each(std::mem::drop);
   |         ^^^^^^^^^^^^^ required by this bound in `check_stream`

error[E0277]: the trait bound `NotFusedStream: FusedStream` is not satisfied
  --> tests/compile-fail-stable/surface_source_stream_not_fused.rs:29:9
   |
29 |         source_stream(stream) -> for_each(std::mem::drop);
   |         ^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FusedStream` is not implemented for `NotFusedStream`
  --> tests/compile-fail-stable/surface_source_stream_not_fused.rs:9:1
   |
 9 | struct NotFusedStream {
   | ^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `FusedStream`:
             &mut F
             Box<S>
             BufferUnordered<St>
             Buffered<St>
             FlatMapUnordered<St, U, F>
             FlattenSink<Fut, Si>
             FlattenStream<F>
             FuturesOrdered<Fut>
           and $N others
note: required by a bound in `check_stream`
  --> tests/compile-fail-stable/surface_source_stream_not_fused.rs:29:9
   |
29 |         source_stream(stream) -> for_each(std::mem::drop);
   |         ^^^^^^^^^^^^^ required by this bound in `check_stream`
